# qr-menu-app

./: Cargo.toml  PLAN.md  README.md
migrations/: 20260622000000_create_users_and_restaurants.sql  20260625000000_create_menu_categories.sql  20260626000000_menu_categories_cascade.sql  20260626120000_create_menu_items.sql  20260701000000_add_photo_url_to_menu_items.sql
src/: auth.rs  categories.rs  escape.rs  items.rs  main.rs  menu.rs  qr.rs  restaurants.rs  uploads.rs
templates/: category_list.html  category_new.html  index.html  item_edit.html  item_list.html  item_new.html  login.html  menu.html  restaurant_new.html  restaurant_show.html  signup.html
