[package]
name = "qr-menu-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
object_store = { version = "0.11", features = ["aws"] }
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }
argon2 = { version = "0.5.3", features = ["password-hash", "rand"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
tower-sessions = { version = "0.14", default-features = false, features = ["axum-core"] }
qrcode = "0.14"
askama = "0.12"
url = "2"
